<resources>
    <string name="app_name">GameBase</string>
    <string name="login">Login</string>
    <string name="login_"><u>Login</u></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="back">Back</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="register_"><u>Register</u></string>
    <string name="terms_and_conditions">I Agree to <u>Terms &amp; Conditions</u></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="or_register_via_google_account">Or Register via Google Account</string>
    <string name="hello">Hello</string>
    <string name="sign_into_your_account">Sign into your Account</string>
    <string name="or_login_via_google_account">Or Login via Google Account</string>
    <string name="googleButton">GoogleButton</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="played">Played</string>
    <string name="search">Search</string>
    <string name="fab_add">fab_add</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="list_mode">List Mode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gameBoxArt">GameBoxArt</string>
    <string name="add_to_favorite_img_btn">add to favorite img btn</string>
    <string name="producer">Producer</string>
    <string name="game_title">Game Title</string>
    <string name="title_activity_game_base">GameBaseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="logo">logo</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="logout">Logout</string>
</resources>