<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:contentDescription="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom"
        />

    <group android:id="@+id/group_view">

        <item
            android:id="@+id/dark_mode"
            android:title="@string/dark_mode"
            android:contentDescription="@string/dark_mode"
            app:showAsAction="never"
            android:checkable="true"
            />
    </group>

    <group android:id="@+id/group_account">
        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:contentDescription="@string/logout"
            app:showAsAction="never"
            />
    </group>
</menu>